--- a/tf2_geometry_msgs/package.xml
+++ b/tf2_geometry_msgs/package.xml
@@ -1,6 +1,6 @@
 <package format="2">
   <name>tf2_geometry_msgs</name>
-  <version>0.22.0</version>
+  <version>0.23.0</version>
   <description>
     tf2_geometry_msgs
   </description>
@@ -18,15 +18,11 @@
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
 
-  <!-- python support not yet ported
-  <build_depend>python_orocos_kdl</build_depend>
-
-  <exec_depend>python_orocos_kdl</exec_depend>
-  -->
-
+  <exec_depend>python3-numpy</exec_depend>
   <exec_depend>tf2_ros_py</exec_depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
+  <test_depend>ament_cmake_pytest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
   <test_depend>rclcpp</test_depend>
