--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = 6b341b73
+	base = 47e1705f
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = 6b341b73
