--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = 9148252c
+	base = 6a5877fc
 	trim = tf2_py
-	trimbase = 
+	trimbase = 9148252c
