--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = dad99c34
+	base = dcce9e2e
 	trim = geometry2
-	trimbase = 
+	trimbase = dad99c34
