--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = f31ce168
+	base = 3ea6f505
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = f31ce168
