--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = 823c6662
+	base = 22fdc3ce
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = 823c6662
