--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = 90208b21
+	base = 5004b40f
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = 90208b21
