--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = 4c5b99e7
+	base = 1ecd415b
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = 4c5b99e7
