--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = 00fdf831
+	base = b6d4d66d
 	trim = tf2_ros
-	trimbase = 
+	trimbase = 00fdf831
