--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = eb83c318
+	base = da148c8c
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = eb83c318
