--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = 18c8198e
+	base = 44b660fc
 	trim = tf2_tools
-	trimbase = 
+	trimbase = 18c8198e
