--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = ac1db8d1
+	base = 6a135c67
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = ac1db8d1
