--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = 778542ae
+	base = 5360eef1
 	trim = tf2
-	trimbase = 
+	trimbase = 778542ae
