--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = b677f35a
+	base = 19a155b2
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = b677f35a
