--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b93a978
-	base = 3491b941
+	base = 6374b510
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 3491b941
