--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.22.0-1": ["Tue Mar 01 2022", "Chris Lalancette", "clalancette@openrobotics.org"], "0.21.0-2": ["Tue Feb 08 2022", "Chris Lalancette", "clalancette@openrobotics.org"]}
+{"0.23.0-1": ["Mon Mar 28 2022", "Chris Lalancette", "clalancette@openrobotics.org"], "0.22.0-1": ["Tue Mar 01 2022", "Chris Lalancette", "clalancette@openrobotics.org"], "0.21.0-2": ["Tue Feb 08 2022", "Chris Lalancette", "clalancette@openrobotics.org"]}
