--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = e4ff7c37
+	base = 5db55e89
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = e4ff7c37
