--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = b3c988cd
+	base = 6e79cd40
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = b3c988cd
