--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = 7fb13515
+	base = 3515caf3
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = 7fb13515
