--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = a798a3e2
+	base = 4cba8124
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = a798a3e2
