--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = 67f27033
+	base = 8791f26d
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 67f27033
