--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = 60ffa1c0
+	base = 41fea108
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = 60ffa1c0
