--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = 6413570c
+	base = f3897957
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = 6413570c
