--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = f80bc1f3
+	base = 03cf1fc1
 	trim = tf2_ros
-	trimbase = 
+	trimbase = f80bc1f3
