--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = c23788a8
+	base = 5b701172
 	trim = tf2_py
-	trimbase = 
+	trimbase = c23788a8
