--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = 61f7f885
+	base = 954eb45c
 	trim = tf2_tools
-	trimbase = 
+	trimbase = 61f7f885
