--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = f7bd635b
+	base = 1c86ee71
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = f7bd635b
