--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = 1cd678aa
+	base = 0d2c8ec3
 	trim = tf2
-	trimbase = 
+	trimbase = 1cd678aa
