--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = cf7aecf2
+	base = 53d536eb
 	trim = geometry2
-	trimbase = 
+	trimbase = cf7aecf2
