--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 798859cf
-	base = 03e0104f
+	base = 6f299484
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = 03e0104f
