--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = 60b16209
+	base = cf8bfc5b
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = 60b16209
