--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = 960435c2
+	base = 45d67b13
 	trim = tf2_py
-	trimbase = 
+	trimbase = 960435c2
