--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = 53325292
+	base = cd0a2498
 	trim = geometry2
-	trimbase = 
+	trimbase = 53325292
