--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = 535f6c37
+	base = 38ad6f8e
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = 535f6c37
