--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = 9ca370f3
+	base = 3bf6c054
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = 9ca370f3
