--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = 1c40196c
+	base = 0699a940
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = 1c40196c
