--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = 9ce71140
+	base = 58d64af0
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = 9ce71140
