--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = b66e3ec5
+	base = 3444047a
 	trim = tf2_ros
-	trimbase = 
+	trimbase = b66e3ec5
