--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = c27a2778
+	base = 4c03bfb5
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = c27a2778
