--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = 63ed0486
+	base = 8fe49fa0
 	trim = tf2_tools
-	trimbase = 
+	trimbase = 63ed0486
