--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = a8ce5d08
+	base = f058b020
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = a8ce5d08
