--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = 66be6ea8
+	base = 502db06d
 	trim = tf2
-	trimbase = 
+	trimbase = 66be6ea8
