--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = 87433988
+	base = dfc6181a
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = 87433988
