--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1264ee4e
-	base = 69828433
+	base = 903dae7c
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 69828433
