--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = 24538fb5
+	base = 4ff1fb79
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = 24538fb5
