--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = 24cafa8e
+	base = 3308e2b8
 	trim = tf2_py
-	trimbase = 
+	trimbase = 24cafa8e
