--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = e5151c77
+	base = 125b2fac
 	trim = geometry2
-	trimbase = 
+	trimbase = e5151c77
