--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = 56745737
+	base = 7a6b3a87
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = 56745737
