--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = ece3fa0b
+	base = a2aac87f
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = ece3fa0b
