--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = eda4dfce
+	base = 7b3da6df
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = eda4dfce
