--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = 7632b787
+	base = 56c085b7
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = 7632b787
