--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = f841d383
+	base = 6ba7b6d2
 	trim = tf2_ros
-	trimbase = 
+	trimbase = f841d383
