--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = b0000902
+	base = dc0f9d55
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = b0000902
