--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = f4494e03
+	base = cd505b2f
 	trim = tf2_tools
-	trimbase = 
+	trimbase = f4494e03
