--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = 9640a9af
+	base = 7bd604bc
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = 9640a9af
