--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = 6f2ce8b6
+	base = fe5931e0
 	trim = tf2
-	trimbase = 
+	trimbase = 6f2ce8b6
