--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = cb0a0735
+	base = c5830ea9
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = cb0a0735
