--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c6280f31
-	base = b8359c2c
+	base = 4d927f6f
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = b8359c2c
