--- a/tracks.yaml
+++ b/tracks.yaml
@@ -189,7 +189,7 @@ tracks:
       :{release_inc} --os-name fedora
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
-    devel_branch: ros2
+    devel_branch: humble
     last_version: 0.25.0
     name: geometry2
     patches: null
