--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = ab2de411
+	base = 59af23ea
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = ab2de411
