--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = f9d77650
+	base = 7196c75b
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = f9d77650
