--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = dfbb4033
+	base = 65866dbc
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = dfbb4033
