--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = cc8b82a8
+	base = 490c1700
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = cc8b82a8
