--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = f742faca
+	base = a1966362
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = f742faca
