--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = e388093b
+	base = 46fc3a8e
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = e388093b
