--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = 2f9d883d
+	base = 219e4e7b
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = 2f9d883d
