--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = efa65f78
+	base = 6efa8848
 	trim = tf2_ros
-	trimbase = 
+	trimbase = efa65f78
