--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = 9bac5456
+	base = 176647fa
 	trim = tf2_py
-	trimbase = 
+	trimbase = 9bac5456
