--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = fc90bda7
+	base = 74b6ba9f
 	trim = tf2_tools
-	trimbase = 
+	trimbase = fc90bda7
