--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = 4e65b686
+	base = 9967d3cc
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = 4e65b686
