--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = 06a90c51
+	base = 3b8284de
 	trim = tf2
-	trimbase = 
+	trimbase = 06a90c51
