--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = c036c434
+	base = 502ecb68
 	trim = geometry2
-	trimbase = 
+	trimbase = c036c434
