--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f960d6db
-	base = ccc2d515
+	base = 665d3d81
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = ccc2d515
