--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = 7aa01df7
+	base = ec401150
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = 7aa01df7
