--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = f4d153fe
+	base = 17551af5
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = f4d153fe
