--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = b782b8d3
+	base = 8c92645b
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = b782b8d3
