--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = 00053ecc
+	base = 37010639
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = 00053ecc
