--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = b84d0378
+	base = c982d9f3
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = b84d0378
