--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = 8a2958f6
+	base = 1b966e50
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = 8a2958f6
