--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = 0c58c214
+	base = a0ad84ee
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = 0c58c214
