--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = 81b2854d
+	base = e07b16be
 	trim = tf2_ros
-	trimbase = 
+	trimbase = 81b2854d
