--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = d2704d9a
+	base = e5553401
 	trim = tf2_py
-	trimbase = 
+	trimbase = d2704d9a
