--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = 5ed5c414
+	base = c8b679f3
 	trim = tf2_tools
-	trimbase = 
+	trimbase = 5ed5c414
