--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = c327a2e3
+	base = 3ff769c6
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = c327a2e3
