--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = ab7f2010
+	base = af95e6d4
 	trim = tf2
-	trimbase = 
+	trimbase = ab7f2010
