--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = a8607df9
+	base = 76084b09
 	trim = geometry2
-	trimbase = 
+	trimbase = a8607df9
