--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 69c80cb3
-	base = 20816348
+	base = 99dcb1bc
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = 20816348
