--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 56359136
+	base = cf4bc398
 	trim = tf2_tools
-	trimbase = 
+	trimbase = 56359136
