--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = bb0e5c04
+	base = 4cb3842a
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = bb0e5c04
