--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 5d274021
+	base = b3e4567b
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 5d274021
