--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 1f63419b
+	base = e06d6cf9
 	trim = tf2_ros
-	trimbase = 
+	trimbase = 1f63419b
