--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 4c7436c8
+	base = 869977ef
 	trim = tf2_py
-	trimbase = 
+	trimbase = 4c7436c8
