--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 08543c93
+	base = 6ae36021
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = 08543c93
