--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 495715e2
+	base = ee040d98
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = 495715e2
