--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 9ddb4b78
+	base = a6d8253e
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = 9ddb4b78
