--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 9ae47c35
+	base = bd2cf1cb
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = 9ae47c35
