--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = fe1c5e02
+	base = 46c2a4bd
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = fe1c5e02
