--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 963f7fcd
+	base = 4e083d7f
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = 963f7fcd
