--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 2a4e02b7
+	base = 910aa025
 	trim = tf2
-	trimbase = 
+	trimbase = 2a4e02b7
