--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 68762a67
+	base = 19932678
 	trim = geometry2
-	trimbase = 
+	trimbase = 68762a67
