--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a2ddabdd
-	base = 7e99fec3
+	base = 1e33f741
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = 7e99fec3
