--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package format="2">
   <name>tf2_sensor_msgs</name>
-  <version>0.26.1</version>
+  <version>0.26.2</version>
   <description>
     Small lib to transform sensor_msgs with tf. Most notably, PointCloud2
   </description>
@@ -11,7 +11,7 @@
   <author>Vincent Rabaud</author>
   <author email="vincent.rabaud@gmail.com">Vincent Rabaud</author>
 
-  <buildtool_depend>ament_cmake_auto</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>eigen3_cmake_module</buildtool_depend>
   <buildtool_depend>python_cmake_module</buildtool_depend>
 
