--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 9983b3312
+	base = 52bc3847c
 	trim = tf2_py
-	trimbase = 
+	trimbase = 9983b3312
