--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = dece05758
+	base = b1dd0c1f4
 	trim = geometry2
-	trimbase = 
+	trimbase = dece05758
