--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 7fa09b2c6
+	base = 97f29ec66
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = 7fa09b2c6
