--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = d9c91bdea
+	base = 6dd615e5a
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = d9c91bdea
