--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 6d3ca9ac0
+	base = 3e8e8daf3
 	trim = tf2_tools
-	trimbase = 
+	trimbase = 6d3ca9ac0
