--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 8f030f6ee
+	base = 32f8fd068
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = 8f030f6ee
