--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 6c40ce704
+	base = cb1da7137
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = 6c40ce704
