--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 03e993e20
+	base = 6e331b680
 	trim = tf2_ros
-	trimbase = 
+	trimbase = 03e993e20
