--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 5cb6dbea7
+	base = b5e898434
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = 5cb6dbea7
