--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 1d0686fe2
+	base = 2c98f4ffe
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = 1d0686fe2
