--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = e02cff4dc
+	base = b2265bfb1
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = e02cff4dc
