--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 287806df1
+	base = b81ba2bc1
 	trim = tf2
-	trimbase = 
+	trimbase = 287806df1
