--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 907cca08c
+	base = 064db5203
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 907cca08c
