--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = e68af58f5
+	base = e115812d5
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = e68af58f5
