--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 838898bc6
+	base = 7ded62dce
 	trim = tf2_py
-	trimbase = 
+	trimbase = 838898bc6
