--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 20718f6a6
+	base = bab2efa93
 	trim = geometry2
-	trimbase = 
+	trimbase = 20718f6a6
