--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = e2d2001cc
+	base = afbed622b
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = e2d2001cc
