--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = a3971dff8
+	base = a55683028
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = a3971dff8
