--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 27989caee
+	base = 28c2caf88
 	trim = tf2_tools
-	trimbase = 
+	trimbase = 27989caee
