--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 94fb53f5d
+	base = d3b746667
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = 94fb53f5d
