--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = df7e625ab
+	base = 907581701
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = df7e625ab
