--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 8ce8d8314
+	base = 728375d2e
 	trim = tf2_ros
-	trimbase = 
+	trimbase = 8ce8d8314
