--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = c974ea539
+	base = 460da69d6
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = c974ea539
