--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = c82ca923b
+	base = ee83f99a9
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = c82ca923b
