--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = b03fb8f70
+	base = a8bdef2de
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = b03fb8f70
