--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 69d83680a
+	base = 37eedfd82
 	trim = tf2
-	trimbase = 
+	trimbase = 69d83680a
