--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 96e406aea
+	base = e63b57d25
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 96e406aea
