--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7fc71f976
-	base = 57078940d
+	base = 23d571c1e
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = 57078940d
