--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = a2e8801b0
+	base = ab913d399
 	trim = tf2_py
-	trimbase = 
+	trimbase = a2e8801b0
