--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = b181a1f69
+	base = be729927f
 	trim = geometry2
-	trimbase = 
+	trimbase = b181a1f69
