--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = 2606535f8
+	base = 1eca06a29
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = 2606535f8
