--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = 046df5925
+	base = 5d5ba77da
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = 046df5925
