--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = 81647b31b
+	base = b1645ef26
 	trim = tf2_tools
-	trimbase = 
+	trimbase = 81647b31b
