--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = 099c81107
+	base = 92a6b302e
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = 099c81107
