--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = 441271826
+	base = 2e3845ff6
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = 441271826
