--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = a9e6f3353
+	base = 912d9ff7f
 	trim = tf2_ros
-	trimbase = 
+	trimbase = a9e6f3353
