--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = 8f1bdca68
+	base = 3e85fbcdf
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = 8f1bdca68
