--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = ddf981818
+	base = 9d7a908e8
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = ddf981818
