--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = 32dc48ac2
+	base = 79c019983
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = 32dc48ac2
