--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = a08f74532
+	base = f578e0587
 	trim = tf2
-	trimbase = 
+	trimbase = a08f74532
