--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = 95f2c28d0
+	base = 797ab85a5
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 95f2c28d0
