--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 857c3b9a9
-	base = cd6d07a4e
+	base = d192d51d4
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = cd6d07a4e
