--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = 9b316994b
+	base = 7c8bde649
 	trim = tf2_py
-	trimbase = 
+	trimbase = 9b316994b
