--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = 232fe27b6
+	base = 55056a148
 	trim = geometry2
-	trimbase = 
+	trimbase = 232fe27b6
