--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = 1d1abac83
+	base = d0a7a095c
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = 1d1abac83
