--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = 756f30314
+	base = 63afae77e
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = 756f30314
