--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = f29c85150
+	base = 77ba74afa
 	trim = tf2_tools
-	trimbase = 
+	trimbase = f29c85150
