--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = 50197f0f4
+	base = 6f2fa59c5
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = 50197f0f4
