--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = cf8fc7c69
+	base = c2b233cc6
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = cf8fc7c69
