--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = 7ab2038ac
+	base = 412a85320
 	trim = tf2_ros
-	trimbase = 
+	trimbase = 7ab2038ac
