--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = 74f0bf2d4
+	base = a4c6564fc
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = 74f0bf2d4
