--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = 8b575810b
+	base = efc92f12a
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = 8b575810b
