--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = 9990586da
+	base = 34563fc06
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = 9990586da
