--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = b1645f210
+	base = d0a5b0827
 	trim = tf2
-	trimbase = 
+	trimbase = b1645f210
