--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = 5142f47ef
+	base = a3b9e2924
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 5142f47ef
