--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e297b5196
-	base = 4b96a926e
+	base = 5fce3d7a2
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = 4b96a926e
