--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = 0a47d18e4
+	base = 05454b330
 	trim = tf2_py
-	trimbase = 
+	trimbase = 0a47d18e4
