--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = f5649e336
+	base = 6398432ea
 	trim = geometry2
-	trimbase = 
+	trimbase = f5649e336
