--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = 7189f3aab
+	base = 92e3cbb29
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = 7189f3aab
