--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = 8d32492c9
+	base = daef4dacc
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = 8d32492c9
