--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = 6b245020a
+	base = df26c385e
 	trim = tf2_tools
-	trimbase = 
+	trimbase = 6b245020a
