--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = e017c7775
+	base = 9e8ae3dd8
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = e017c7775
