--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = ea91f3822
+	base = 8d53b4ae2
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = ea91f3822
