--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = ba58c13ec
+	base = 77798366c
 	trim = tf2_ros
-	trimbase = 
+	trimbase = ba58c13ec
