--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = 741ba4473
+	base = 70ead67ff
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = 741ba4473
