--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = c11aca053
+	base = 0afd483da
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = c11aca053
