--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = b39dc1b57
+	base = cda4e369d
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = b39dc1b57
