--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = a2685dc1c
+	base = 9f2b9f74d
 	trim = tf2
-	trimbase = 
+	trimbase = a2685dc1c
