--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = 6a3fb5d59
+	base = c027b3d9e
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 6a3fb5d59
