--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9dc20c115
-	base = feae0d413
+	base = b0ab5ecdc
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = feae0d413
