--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = b793d61aa
+	base = 820c69b6a
 	trim = tf2_py
-	trimbase = 
+	trimbase = b793d61aa
