--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = 568e6330e
+	base = 6ab2f0bf2
 	trim = geometry2
-	trimbase = 
+	trimbase = 568e6330e
