--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = d82829f73
+	base = 9ebbd60e6
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = d82829f73
