--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = 01403e80e
+	base = e1393a2ff
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = 01403e80e
