--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = 73b43c0a1
+	base = 970094eca
 	trim = tf2_tools
-	trimbase = 
+	trimbase = 73b43c0a1
