--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = 4d7bdb9e5
+	base = c652babf9
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = 4d7bdb9e5
