--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = b5c1df36b
+	base = 0bde387fe
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = b5c1df36b
