--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = 3e7844d6c
+	base = 76a91d7ea
 	trim = tf2_ros
-	trimbase = 
+	trimbase = 3e7844d6c
