--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = dd7c35d39
+	base = 0bc37ea87
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = dd7c35d39
