--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = 92a125404
+	base = d0647a1df
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = 92a125404
