--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = 93e5458b0
+	base = 60f5f6a77
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = 93e5458b0
