--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = 5ae75cce0
+	base = 9c112b444
 	trim = tf2
-	trimbase = 
+	trimbase = 5ae75cce0
