--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = 048b10de6
+	base = d9a775c70
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 048b10de6
