--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a8dce4eb0
-	base = f7a50f2eb
+	base = 29692408a
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = f7a50f2eb
