--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = a57b5fbb2
+	base = ca2388a2e
 	trim = tf2_py
-	trimbase = 
+	trimbase = a57b5fbb2
