--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = 499bc41fc
+	base = 47d5159c0
 	trim = geometry2
-	trimbase = 
+	trimbase = 499bc41fc
