--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = 66d136cda
+	base = 2f7974547
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = 66d136cda
