--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = 094d2e749
+	base = b72bfe5c4
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = 094d2e749
