--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = c1c8ae099
+	base = 48ef5b6d6
 	trim = tf2_tools
-	trimbase = 
+	trimbase = c1c8ae099
