--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = 7be104d2f
+	base = c11f01bc3
 	trim = tf2_eigen_kdl
-	trimbase = 
+	trimbase = 7be104d2f
