--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = 53e20e3e3
+	base = be2e2838d
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = 53e20e3e3
