--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = c0a5bc2ce
+	base = 65f475768
 	trim = tf2_ros
-	trimbase = 
+	trimbase = c0a5bc2ce
