--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = fdf47224a
+	base = 9af85157f
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = fdf47224a
