--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = 3fb18fc6b
+	base = d3db5c2d5
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = 3fb18fc6b
