--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = fffc9f618
+	base = 0f34e8a90
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = fffc9f618
