--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = e08677d62
+	base = 61bff5204
 	trim = tf2
-	trimbase = 
+	trimbase = e08677d62
