--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = 6a213578a
+	base = 549f9ad51
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 6a213578a
