--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8f9b35203
-	base = d8de11b08
+	base = 1f3ae9668
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = d8de11b08
