--- a/tf2_kdl/package.xml
+++ b/tf2_kdl/package.xml
@@ -1,6 +1,6 @@
 <package format="2">
   <name>tf2_kdl</name>
-  <version>0.45.2</version>
+  <version>0.45.3</version>
   <description>
     KDL binding for tf2
   </description>
@@ -36,6 +36,7 @@
 
   <export>
     <build_type>ament_cmake</build_type>
+    <rosdoc2>rosdoc2.yaml</rosdoc2>
   </export>
 
 </package>
