--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = ee59c89cc
+	base = 12919540b
 	trim = tf2_py
-	trimbase = 
+	trimbase = ee59c89cc
