--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = 6a42cc65a
+	base = ef65f0cf3
 	trim = geometry2
-	trimbase = 
+	trimbase = 6a42cc65a
