--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = e9b82ba4f
+	base = 1438740ad
 	trim = tf2_geometry_msgs
-	trimbase = 
+	trimbase = e9b82ba4f
