--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = 4c3a14ffe
+	base = afa9b9e60
 	trim = tf2_msgs
-	trimbase = 
+	trimbase = 4c3a14ffe
