--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = 5672388ff
+	base = ad942bf21
 	trim = tf2_tools
-	trimbase = 
+	trimbase = 5672388ff
