--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = 9557c348f
+	base = b26f25b90
 	trim = examples_tf2_py
-	trimbase = 
+	trimbase = 9557c348f
