--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = 359c98438
+	base = bb2bfb51d
 	trim = tf2_ros
-	trimbase = 
+	trimbase = 359c98438
