--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = b344739d1
+	base = 16b202873
 	trim = tf2_bullet
-	trimbase = 
+	trimbase = b344739d1
