--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = 0335045d8
+	base = 346619c86
 	trim = tf2_eigen
-	trimbase = 
+	trimbase = 0335045d8
