--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = e3b98031c
+	base = f5d916088
 	trim = tf2_sensor_msgs
-	trimbase = 
+	trimbase = e3b98031c
