--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = 28e35c74a
+	base = f1401f2bc
 	trim = tf2
-	trimbase = 
+	trimbase = 28e35c74a
