--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = 18520de2e
+	base = 00dc64230
 	trim = tf2_ros_py
-	trimbase = 
+	trimbase = 18520de2e
