--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 96702bb33
-	base = d1fee8249
+	base = f52d06d09
 	trim = tf2_kdl
-	trimbase = 
+	trimbase = d1fee8249
